# MyFridge_Agent

./: .gitignore  AGENTS.md  IDENTITY.md  MEMORY.md  README.md  README_cn.md  USER.md
.openclaw/: workspace-state.json
database/: fridge_smart.db  my_fridge  my_fridge.backup_before_delete_half_20260407_205555  my_fridge.backup_before_delete_named_items_20260408_1436  my_fridge.backup_before_location_migration  schema.sql
install/: local_setup.sh  setup.sh
install/test_pk/lib/test_pk/: test_node
install/test_pk/share/ament_index/resource_index/package_run_dependencies/: test_pk
install/test_pk/share/ament_index/resource_index/parent_prefix_path/: test_pk
install/test_pk/share/test_pk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/test_pk/share/test_pk/cmake/: test_pkConfig-version.cmake  test_pkConfig.cmake
install/test_pk/share/test_pk/environment/: ament_prefix_path.dsv  path.dsv
install/test_pk/share/test_pk/launch/: a.txt  aa.txt
install/websocket/lib/websocket/: websocket
install/websocket/lib/websocket/webservice/conf/: fastcgi.conf  fastcgi.conf.default  fastcgi_params  fastcgi_params.default  koi-utf  koi-win  mime.types  mime.types.default  nginx.conf  nginx.conf.default  scgi_params  scgi_params.default  uwsgi_params  uwsgi_params.default  win-utf
install/websocket/lib/websocket/webservice/html/: index.html
install/websocket/lib/websocket/webservice/sbin/: nginx
install/websocket/share/ament_index/resource_index/package_run_dependencies/: websocket
install/websocket/share/ament_index/resource_index/parent_prefix_path/: websocket
install/websocket/share/websocket/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/websocket/share/websocket/cmake/: websocketConfig-version.cmake  websocketConfig.cmake
install/websocket/share/websocket/environment/: ament_prefix_path.dsv  path.dsv
install/websocket/share/websocket/launch/: websocket.launch.py  websocket_service.launch.py
launch/: run.launch.py
log/: latest_build
memory/: 2026-05-26.md
scripts/: build_ros_clean.sh
src/connector/: CMakeLists.txt  package.xml
src/connector/assets/: main.cpp  main.py
src/connector/include/connector/: serial_port.hpp
src/connector/include/utils/: PIDcontroller.hpp
src/connector/launch/: connector.launch.py
src/connector/src/: mcu_connector_node.cpp  qdriver_connector_node.cpp  uart_node.cpp
src/creative_robot_bringup/: CMakeLists.txt  package.xml
src/hobot_cam/: CMakeLists.txt  package.xml
src/hobot_cam/include/usb_cam/: usb_cam.hpp  utils.hpp
src/hobot_cam/src/: camera_node.cpp
src/hobot_cam/src/cam_v4l2/: cam_v4l2.cpp
src/my_fridge_agent_bringup/: CMakeLists.txt  package.xml
src/my_fridge_agent_bringup/launch/: bringup.launch.py
src/qt_display/: package.xml  setup.py
src/qt_display/backup/: first.py  first.py.backup
src/qt_display/launch/: qtapp.launch.py
src/qt_display/qt_display/: ai_agent.py  config.py  display_component.py  display_node.py  main.py  package.xml  setup.cfg
src/qt_display/qt_display/qt_display/: first.py  main.py
src/sql_interface/: CMakeLists.txt  package.xml
src/sql_interface/srv/: SQLOperation.srv
src/sql_server/: CMakeLists.txt  package.xml
src/sql_server/include/sql_server/: sql_server_node.hpp
src/sql_server/launch/: sql_server.launch.py
src/sql_server/src/: main.cpp  sql_server_node.cpp
src/sql_server/src/sql_server/: sql_server_node.cpp
src/test_pk/: CMakeLists.txt
src/test_pk/include/websocket/: websocket.h
src/test_pk/install/: local_setup.sh  setup.sh
src/test_pk/log/: latest_build
src/test_pk/src/: main.cpp
src/tongue_diagnosis/: PACKAGE_STATUS.md  README.md  package.xml  setup.cfg  setup.py
src/tongue_diagnosis/launch/: tongue_diagnosis.launch.py
src/tongue_diagnosis/tongue_diagnosis/: resnet.py  tongue_diagnosis_node.py  utils.py  yolov26seg.py
(+89 files in other folders)
