<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>creative_robot_bringup</name>
  <version>0.0.0</version>
  <description>System bringup package for CreativeRobot.</description>
  <maintainer email="1709038900@qq.com">kunp</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>connector</exec_depend>
  <exec_depend>hobot_usb_cam</exec_depend>
  <exec_depend>qt_display</exec_depend>
  <exec_depend>sql_server</exec_depend>
  <exec_depend>tongue_diagnosis</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
